2006-09-05 Sandro Santilli <strk@refractions.net>

	* source/precision/GeometrySnapper.cpp,
	  source/headers/geos/precision/GeometrySnapper.h:
          Accept snapping tolerance as parameter, provide snap
	  tolerance computation function.
	* source/headers/geos/geom/BinaryOp.h: compute a smart
	  snap tolerance for given input when using snapping heuristic.
	* source/operation/overlay/OverlayOp.cpp (checkObviouslyWrongResult):
	  reworded exception messages

2006-07-26 Sandro Santilli <strk@refractions.net>

	* source/index/quadtree/Root.cpp (insertContained):
	  fixed bug in isZeroY computation - see
	  geos-devel/2006-August/002541.html

2006-08-03 Charlie Savage <cfis@savagexi.com>

	* Added equalsExact and normalize to the c api as discussed here
	http://geos.refractions.net/pipermail/geos-devel/2006-July/002452.html.

2006-08-03 Charlie Savage <cfis@savagexi.com>

	* swig/python/Makefile.am: geos.py and geos_wrap.cxx are 
	now removed by make maintainer-clean but not make clean.
	* swig/ruby/Makefile.am: geos.py and geos_wrap.cxx are 
	now removed by make maintainer-clean but not make clean.

006-08-03 Mateusz Loskot <mateusz@loskot.net>

	* tests/unit/geos_unit.cpp: fixed Bug #90

2006-07-26 Sandro Santilli <strk@refractions.net>

	* capi/Makefile.am: forced link of geostest against stdc++ lib
	* tests/xmltester/XMLTester.cpp: added <cmath>
	  include (for fabs use)
	* source/headers/geos/geom/BinaryOp.h:
	  Added geometry snapping heuristic

2006-07-25 Sandro Santilli <strk@refractions.net>

	* autogen.sh: make failures more visible

2006-07-21 Mateusz Loskot <mateusz@loskot.net>

	* source/headers/geos/geom.h,
	source/headers/geos/io.h: Wrapped FIXME message with
	#warning directive to shout about potential headers
	removal in future.


2006-07-21 Sandro Santilli <strk@refractions.net>

	* source/headers/geos/precision/GeometrySnapper.h,
	  source/headers/geos/precision/LineStringSnapper.h,
	  source/headers/geos/precision/Makefile.am,